2005-08-29  Junichi Uekawa  <dancer@debian.org>

	* pdebuild.1: update semantics; left-to-right
	* pbuilder.8: update semantics; left-to-right

2005-08-28  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc: SHELL variable is set a default value.

2005-08-19  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: do cow thing, with cowprotect, for cowdancer.	

2005-08-17  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update the TODO list.

	* pbuilder-buildpackage-funcs: pass ${CHROOTEXEC} value directly to pbuilder-satisfydepends.

	* pbuilder-satisfydepends (CONTINUE_FAIL): add --internal-chrootexec

2005-08-15  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: $CHROOTEXEC instead of direct invocation of 'chroot' 
	  command.
	  satisfydepends needs the CHROOTEXEC support.

	  I want to support setting CHROOTEXEC so that I can hook
	  'chroot XXX cow-shell' instead of 'chroot XXX'

2005-08-07  Junichi Uekawa  <dancer@debian.org>

	* debian/control: allow cdebootstrap dependency.

	* testsuite/run-test.sh: complicate the process by testing both
	  cdebootstrap and debootstrap.

	* pbuilder.8: document --debootstrap 

	* pbuilder-checkparams: --debootstrap

	* pbuilder-modules: --debootstrap

	* pbuilder-createbuildenv: unset DEBOOTSTRAPSCRIPT instead of setting
	"". The number of parameter given to cdebootstrap changes.
	since DEBOOTSTRAPSCRIPT are not supported by cdebootstrap, 
	Giving cdebootstrap this parameter caused it to fail.

	* pbuilderrc.5: Document DEBOOTSTRAP

	* pbuilderrc (DEBOOTSTRAP): new option.

	* pbuilder-createbuildenv (DEBOOTSTRAPSCRIPT): call ${DEBOOTSTRAP} instead of calling debootstrap directly.

2005-07-28  Junichi Uekawa  <dancer@debian.org>

	* Documentation/Makefile (%.html): update make rule to successfully fail on error.

2005-07-14  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage: change the use of su, to 
	allow su design change. Bug: 317264

2005-07-13  Junichi Uekawa  <dancer@debian.org>
