@@ -1,8 +1,9 @@
 pbuilder (0.131) UNRELEASED; urgency=low
 
   * Document that pbuilder applies options from left-to-right. (closes: #324620)
+  * Document updates on pbuilder move to alioth.
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 29 Aug 2005 21:34:04 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun,  4 Sep 2005 12:14:37 +0900
 
 pbuilder (0.130) unstable; urgency=low
 
