@@ -1,3 +1,11 @@
+2005-09-04  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml: Add notes on cowdancer.
+	updates notes to note that it's hosted at alioth now.
+
+	* Documentation/Makefile (preview): create target for preview with
+	mozilla firefox.
+
 2005-08-29  Junichi Uekawa  <dancer@debian.org>
 
 	* pdebuild.1: update semantics; left-to-right
